k8s/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sse
  labels:
    name: sse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-sent-events
  namespace: sse
  labels:
    app: server-sent-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-sent-events
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: server-sent-events
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: server-sent-events
          image: shubham01/server-sent-events:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 120
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 90
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: server-sent-events
  namespace: sse
spec:
  selector:
    app: server-sent-events
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-sent-events
  namespace: sse
spec:
  rules:
    - http:
        paths:
          - path: /sse/*
            pathType: Prefix
            backend:
              service:
                name: server-sent-events
                port:
                  number: 80
